<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.micronaut.platform</groupId>
        <artifactId>micronaut-parent</artifactId>
        <version>4.4.1</version>
    </parent>

    <groupId>pl.piomin.services</groupId>
    <artifactId>sample-micronaut-microservices</artifactId>
    <version>1.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <micronaut.version>4.4.1</micronaut.version>
        <jdk.version>21</jdk.version>
        <release.version>${jdk.version}</release.version>
        <sonar.projectKey>piomin_sample-micronaut-microservices</sonar.projectKey>
        <sonar.organization>piomin</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    </properties>

    <modules>
        <module>discovery-service</module>
        <module>department-service</module>
        <module>employee-service</module>
        <module>organization-service</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.12</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>